--- a/E_motion/index_About.html
+++ b/E_motion/index_About.html
@@ -28,7 +28,7 @@
 
   <div class="topnav">
     <a href="index_Video.html">[E·motion]</a>
-    <a href="index_About_ITA.html" class="active">About</a>
+    <a href="index_About.html" class="active">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
       <a href="index_Trial.html">Trial</a>
@@ -36,19 +36,16 @@
   </div>
 
   <div class="language">
-    <a class="demo-text" id="text" onclick='document.getElementById("text").innerHTML = "[E·motion] it’s a Typeface designed for a film or small clip subtitles.[E·motion] have been con-ceived not only to translate the dialogue, in fact he rebuilds the emotion and sound effect of the different scenes you see on videos. The font presents nine variables emotion with also a neutral weight one. The choice of this nine variable emotions, has been based on the studies of the emotions by Robert Plutchik and Paul Elkman, who has found the eight primal emotions. Based on these researches, emotions are made visible by our face body language."'>English</a>
-    <a href="index_About_ITA.html" class="active">Italiano</a>
-    <!-- <div class="topnav-right">
-      <button class="button button-invert" id="button"></button>
-    </div> -->
-  </div>
+    <a onclick="change('[E·motion] it’s a Typeface designed for a film or small clip subtitles. [E·motion] have been conceived not only to translate the dialogue, in fact he rebuilds the emotion and sound effect of the different scenes you see on videos. The font presents nine variables emotion with also a neutral weight one. The choice of this nine variable emotions, has been based on the studies of the emotions by Robert Plutchik and Paul Elkman, who has found the eight primal emotions. Based on these researches, emotions are made visible by our face body language.<br><br><h3>GRAPHIC & TYPE DESIGN<br>Chiara Crivelli<br>Bachelor in Comunicazione Visiva<br>2019–2020<br><br>MANY THANKS TO<br>Sylvain Esposito<br>La mia famiglia<br>I miei amici</h3>' )">English</a>
+    <a onclick="change('[E·motion] è un carattere tipografico ideato per il testo dei sottotitoli presenti nei film e nei video cinematografici.[E·motion] è stato concepito al fine di tradurre non solamente i dialoghi pronunciati dai narratori, ma ricostruisce in modo tipografico un ambiente emotivo e l’aspetto sonoro.Il carattere presenta otto varianti emotive ed un peso neutrale. La scelta di una suddivisione in nove pesi differenti deriva dalle ricerche sulle emozioni realizzate da Robert Plutchik e Paul Ekman, i quali hanno definito le otto emozioni primarie. Secondo i rispettivi studi queste sensazioni sono percettibili sull’espressione facciale.<br><br><h3>GRAFICA  & TYPE DESIGN<br>Chiara Crivelli<br>Bachelor in Comunicazione Visiva<br>2019–2020<br><br>GRAZIE MILLE A<br>Sylvain Esposito<br>La mia famiglia<br>I miei amici</h3>')">Italiano</a>
+</div>
 
 <main class="container">
     <div id="elements">
-    <div id="text">
-      <p style="margin-top: 1.5rem; font-size: 2rem; text-align: left; margin-left: 1rem;   margin-right: 20vw;" class="demo-text" id="text">[E·motion] è un carattere tipografico ideato per il testo dei sottotitoli presenti nei film e nei video cinematografici.
+    <div id="text" style="margin-top: 1.5rem; font-size: 2rem; text-align: left; margin-left: 1rem;   margin-right: 20vw;" class="demo-text">
+  <p>[E·motion] è un carattere tipografico ideato per il testo dei sottotitoli presenti nei film e nei video cinematografici.
         [E·motion] è stato concepito al fine di tradurre non solamente i dialoghi pronunciati dai narratori, ma ricostruisce in modo tipografico un ambiente emotivo e l’aspetto sonoro.
-        Il carattere presenta otto varianti emotive ed un peso neutrale. La scelta di una suddivisione in nove pesi differenti deriva dalle ricerche sulle emozioni realizzate da Robert Plutchik e Paul Ekman, i quali hanno definito le otto emozioni primarie. Secondo i rispettivi studi queste sensazioni sono percettibili sull’espressione facciale.</p>
+        Il carattere presenta otto varianti emotive ed un peso neutrale. La scelta di una suddivisione in nove pesi differenti deriva dalle ricerche sulle emozioni realizzate da Robert Plutchik e Paul Ekman, i quali hanno definito le otto emozioni primarie. Secondo i rispettivi studi queste sensazioni sono percettibili sull’espressione facciale.<br><br><h3>GRAFICA  & TYPE DESIGN<br>Chiara Crivelli<br>Bachelor in Comunicazione Visiva<br>2019–2020<br><br>GRAZIE MILLE A<br>Sylvain Esposito<br>La mia famiglia<br>I miei amici</h3></p>
     </div>
     </div>
 
@@ -114,6 +111,12 @@
   }
   document.ontouchmove = function(e){
     e.preventDefault();
+  }
+</script>
+
+<script>
+  function change(text) {
+    document.getElementById('text').innerHTML = text;
   }
 </script>
 
