--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -19,7 +19,7 @@
 <body>
   <div class="topnav">
     <a href="index_Video.html">[E·motion]</a>
-    <a href="index_About_ITA.html">About</a>
+    <a href="index_About.html">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html" class="active">Specimen</a>
       <a href="index_Trial.html">Trial</a>
@@ -34,7 +34,7 @@
   <!-- <main class="Style-text">[E·motion] Neutral</main> -->
   <main class="container-specimen">
       <p>[E·motion] Neutral</p>
-      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' 0; padding-top: 1.5rem;">
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' 0;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
 
