--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -54,7 +54,7 @@
 			  		<p class="slidertext">Leading</p>
 			  	</div>
 			  	<div class="col-sm-3 ">
-			  		<input type="range" min="85" max="185" value="130" class="slider" id="Leading">
+			  		<input type="range" min="1" max="300" value="100" class="slider" id="Leading">
 		  		</div>
 
 			</div>
@@ -64,17 +64,14 @@
 
 	<div id="elements">
 	<div id="text">
-		<div><span class="val">150</span><p contenteditable="true" id="text1">AcriMSAT</p><span class="val">150</span></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text2">Apollo 12</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text3">Constellation</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text4">DSN 34 Freedom7</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text5">OSIRIS-REx</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text6">OM2300SGX4 3 5X</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text7">MUSTOOL G1200 12MP 45X Zoom Emz</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text8">The term lidar was originally a portmanteau of light and radar.</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text9">Lidar is commonly used to make high-resolution maps, with applications in surveying, geodesy</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text10"> →Lidar Mapping of M6.4 and M7.1 Ridgecrest earthquake sequence. <br>Data collected by NCALM [National Center for Airborne Laser Mapping]</p></div>
+		<p contenteditable="true" id="text1">AcriMSAT</p>
+		<p contenteditable="true" id="text2">Apollo 12</p>
+		<p contenteditable="true" id="text3">Constellation</p>
+		<p contenteditable="true" id="text4">DSN 34 Freedom7</p>
+		<p contenteditable="true" id="text5">OSIRIS-REx</p>
+		<p contenteditable="true" id="text6">OM2300SGX4 3 5X</p>
 	</div>
+	<p>Value: <span id="demo"></span></p>
 	</div>
 
 	<div id="info">
@@ -87,8 +84,8 @@
         	<p class="pText">
            Optotype is a display font with the purpose of experiencing the interaction between screen, distance and readability. Designed starting from a pixel font, the character is inspired by the work of Wim Crouwel, who anticipated the digital revolution. The font takes readability principles from the most geometric font, where it maintains open terminals and a 1/3 ratio in the structure between ascender/descender and x-height.
            </p>
-           <p class="pText" style="text-indent: 40px"><br>The font has been designed for the screen and to be used for titling and branding, adapting to size and resolution. The font changes drastically in four steps that take up digital fonts in the various stages of the digital revolution.</p>
-           	<p class="pText" style="text-indent: 40px"><br>
+           <p class="pText" style="text-indent: 40px">The font has been designed for the screen and to be used for titling and branding, adapting to size and resolution. The font changes drastically in four steps that take up digital fonts in the various stages of the digital revolution.</p>
+           	<p class="pText" style="text-indent: 40px">
          With the distance panel you can modify the variable by approaching or moving away from the camera with your face, through a machine learning system that captures your position.</p>
          
         </div>
